playing with sending tweets

--- a/app/views/posts/tweets.html.erb
+++ b/app/views/posts/tweets.html.erb
@@ -16,7 +16,7 @@
 
 <p>What tweets would you like to post?</p>
 
-<form action="/tweets" method="POST">
+<form action="/send_tweet" method="POST">
 	<input type="text" name="tweet" placeholder="Tweet here"/><br>
 	<input type="submit" value="Post my Tweet"/>
 </form>
