--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,10 @@
+<!-- <div class="jumbotron">
+  <div class="container">
+    <h1>We grow your social accounts so you don't have to</h1>
+    <h2>We launch in 8 weeks. Add your email to get notified.</h2>
+  </div>
+</div>
+ -->
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
@@ -10,6 +17,8 @@
       </ul>
     </div>
   <% end %>
+
+  test
 
   <div class="field">
     <%= f.label :email %><br>
