simple changes to views

--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -4,41 +4,38 @@
 
 		<div>
 			<%= label :monday, "Monday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
 
 		<div>
 			<%= label :tuesday, "Tuesday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
 
 		<div>
 			<%= label :wednesday, "Wednesday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
 
 		<div>
 			<%= label :thursday, "Thursday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
 
 		<div>
 			<%= label :friday, "Friday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
 
 		<div>
 			<%= label :saturday, "Saturday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
 
 		<div>
 			<%= label :sunday, "Sunday" %>
-			<%= check_box_tag 'accept' %>
+			<%= check_box_tag 'accept', true %>
 		</div>
-
-
-
 <% end %>
 
 
