--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -10,16 +10,24 @@
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
 		      <div class="caption">
-		        <h3><a href="<%= entry.url %>"><%= entry.title %></h3>
+		        <h3><a href="<%= entry.url %>"><%= entry.title %></a></h3>
 		        <p><%= entry.summary %></p>
-		        <%= form_tag("/tweet_now", method: "post") do %>
+		        <%= form_tag "/tweet_now", method: :post do %>
 		        <input name="status" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-		        <p><input type="submit" value="Share Now"/>
+		        <p><input type="submit" class="btn btn-primary" value="Share Now"/>
 				<% end %>	
- 				<a href="#" class="btn btn-default" role="button">Schedule</a></p>
+				<%= form_tag "/send_tweet", method: :post do %>
+		        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+					<%= select_year(Time.now) %>
+					<%= select_month(Time.now) %>
+					<%= select_day(Time.now) %>
+					<%= select_hour(Time.now) %>
+ 				<input type="submit" class="btn btn-default" value="Schedule"/>
+ 				<% end %>
 		      </div>
 		    </div>
 		  </div>
+
 	<% end %>
 </div>
 
