--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -17,12 +17,12 @@
 		        <p><input type="submit" class="btn btn-primary" value="Share Now"/>
 				<% end %>	
 				<%= form_tag "/send_tweet", method: :post do %>
-		        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-					<%= select_year(Time.now) %>
-					<%= select_month(Time.now) %>
-					<%= select_day(Time.now) %>
-					<%= select_hour(Time.now) %>
- 				<input type="submit" class="btn btn-default" value="Schedule"/>
+			        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+	 				<div><input type="submit" class="btn btn-default" value="Schedule"/></div>
+	 					<%= select_year(Time.now) %>
+						<%= select_month(Time.now) %>
+						<%= select_day(Time.now) %>
+						<%= select_hour(Time.now) %>
  				<% end %>
 		      </div>
 		    </div>
