only pull last two days of blog posts

--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<% @entries.each do |entry| %>
-		
+		<% if entry.published > 2.days.ago %>
 		  <div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
 		      <div class="caption">
@@ -27,7 +27,7 @@
 		      </div>
 		    </div>
 		  </div>
-
+		<% end %>
 	<% end %>
 </div>
 
