--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,54 +1,50 @@
-
 <div class="container">
 
-<div class="page-header">
-<h1>Share or Schedule</h1>
-</div>
+	<div class="page-header">
+		<h1>Share or Schedule</h1>
+	</div>
 
-<div class="row row-flex row-flex-wrap">
+	<div class="row row-flex row-flex-wrap">
+		<% @urls.find_each do |url| %>
+	       <% @feed = Feedjira::Feed.fetch_and_parse url.url %>
+	        <% @entries = @feed.entries %>
 
-	<% @urls.find_each do |url| %>
-       <% @feed = Feedjira::Feed.fetch_and_parse url.url %>
-        <% @entries = @feed.entries %>
+				<% entries.each do |entry| %>
+					<% if entry.published > 1.days.ago %>
 
-			<% @entries.each do |entry| %>
-				<% if entry.published > 1.days.ago %>
+					  <div class="col-sm-6 col-md-4">
+					    <div class="thumbnail panel panel-default flex-col">
+						  <div class="panel-heading">
+						  		<h3 class="panel-title"><%= @feed.title %></h3>
+						  </div>
 
-				  <div class="col-sm-6 col-md-4">
-				    <div class="thumbnail panel panel-default flex-col">
-					  <div class="panel-heading">
-					  		<h3 class="panel-title"><%= @feed.title %></h3>
+					      <div class="caption">
+					      	<p><small>Published on: <%= entry.published.to_date.strftime("%B %d, %Y") %> at <%=entry.published.to_time.strftime("%I:%M%p") %></small></p>
+
+					        <h3><a href="<%= entry.url %>"><%= entry.title %></a></h3>
+					        <p><%= entry.summary %></p>
+
+					        <%= form_tag "/tweet_now", method: :post do %>
+						        <input name="status" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+						        <p><input type="submit" class="btn btn-primary" value="Share Now"/></p>
+							<% end %>
+
+							<%= form_tag "/send_tweet", method: :post do %>
+						        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+				 				<p><input type="submit" class="btn btn-default" value="Schedule"/></p>
+			 					<p><%= select_year(Time.now) %>
+								<%= select_month(Time.now) %>
+								<%= select_day(Time.now) %>
+								<%= select_hour(Time.now) %></p>
+			 				<% end %>
+
+					      </div>
+					    </div>
 					  </div>
 
-				      <div class="caption">
-				      	<p><small>Published on: <%= entry.published.to_date.strftime("%B %d, %Y") %> at <%=entry.published.to_time.strftime("%I:%M%p") %></small></p>
-
-				        <h3><a href="<%= entry.url %>"><%= entry.title %></a></h3>
-				        <p><%= entry.summary %></p>
-
-				        <%= form_tag "/tweet_now", method: :post do %>
-					        <input name="status" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-					        <p><input type="submit" class="btn btn-primary" value="Share Now"/></p>
-						<% end %>	
-
-						<%= form_tag "/send_tweet", method: :post do %>
-					        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-			 				<p><input type="submit" class="btn btn-default" value="Schedule"/></p>
-		 					<p><%= select_year(Time.now) %>
-							<%= select_month(Time.now) %>
-							<%= select_day(Time.now) %>
-							<%= select_hour(Time.now) %></p>
-		 				<% end %>
-
-				      </div>
-				    </div>
-				  </div>
-
+					<% end %>
 				<% end %>
-			<% end %>
-	<% end %>
-
-</div>
-
+		<% end %>
+	</div>
 </div>
 
