--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -1,42 +1,40 @@
 <div class="container">
+	<div class="page-header">
+		<h1>Share or Schedule</h1>
+	</div>
+	<div class="row">
+		<% @entries.each do |entry| %>
+			<% if entry.published > 1.days.ago %>
 
-<div class="page-header">
-<h1>Share or Schedule</h1>
-</div>
+			  <div class="col-sm-6 col-md-4">
+			    <div class="thumbnail">
+			      <div class="caption">
+			        <h3><a href="<%= entry.url %>"><%= entry.title %></a></h3>
+			        <p><%= entry.summary %></p>
 
-<div class="row">
-	<% @entries.each do |entry| %>
-		<% if entry.published > 1.days.ago %>
+			        <%= form_tag "/tweet_now", method: :post do %>
+				        <input name="status" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+				        <p><input type="submit" class="btn btn-primary" value="Share Now"/>
+							<% end %>
 
-		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
-		      <div class="caption">
-		        <h3><a href="<%= entry.url %>"><%= entry.title %></a></h3>
-		        <p><%= entry.summary %></p>
+							<%= form_tag "/send_tweet", method: :post do %>
+				        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+		 						<div>
+		 							<input type="submit" class="btn btn-default" value="Schedule"/>
+		 						</div>
+		 						<%= select_year(Time.now) %>
+								<%= select_month(Time.now) %>
+								<%= select_day(Time.now) %>
+								<%= select_hour(Time.now) %>
+	 						<% end %>
 
-		        <%= form_tag "/tweet_now", method: :post do %>
-			        <input name="status" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-			        <p><input type="submit" class="btn btn-primary" value="Share Now"/>
-				<% end %>	
+			      </div>
+			    </div>
+			  </div>
 
-				<%= form_tag "/send_tweet", method: :post do %>
-			        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-	 				<div><input type="submit" class="btn btn-default" value="Schedule"/></div>
-	 					<%= select_year(Time.now) %>
-						<%= select_month(Time.now) %>
-						<%= select_day(Time.now) %>
-						<%= select_hour(Time.now) %>
- 				<% end %>
-
-		      </div>
-		    </div>
-		  </div>
-
+			<% end %>
 		<% end %>
-	<% end %>
-
-</div>
-
+	</div>
 </div>
 
 
