added sign in to home page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,9 @@
 	<nav class="navbar">
 	  <div class="container-fluid">
 	      <a class="logo" href="/">Simple Social</a>
-	  		<a class="login" href="/login">Log In</a>
+	  		<a class="login" href="/users/sign_in">Log In</a>
 	  </div>
 	</nav>
 </header>
+
+
