home page now has link to user sign up

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,11 +1,7 @@
 <div class="wrapper clearfix">
 	<div class="field">
 		<h1>We grow your social accounts so you don't have to</h1>
-		<h2>start your free trial right now</h2>
-		<%= form_tag do %>
-			<input type="text" name="email" placeholder="Email Address"/><br>
-			<input type="submit" value="Get Started"/>
-		<% end %>
+		<h2><a href="/users/sign_up" class="field1">start your free trial right now</a></h2>
 	</div>
 
 	<div class="analytics">
