--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -28,6 +28,7 @@
 	width: 50%;
 	margin-top: 100px;
 	float:left;
+	text-align: center;
 }
 
 .analytics {
@@ -36,4 +37,24 @@
 	float:left;
 	margin-top: 100px;
 	text-align: center;
+}
+
+.field1 {
+	color:#fff;
+	padding:30px 80px 30px 80px;
+	background-color: #e74c3c;
+	transition:1s all;
+}
+
+.field1:hover {
+	background-color: #D01401;
+	text-decoration: none;
+}
+
+h2 {
+	font-size:20px;
+	line-height:5em;
+	font-weight:100;
+	color:#444;
+	margin-top:50px;
 }
