--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper clearfix">
 	<div class="field">
 		<h1>We grow your social accounts so you don't have to</h1>
-		<h2><a href="/users/sign_up" class="field1">start your free trial right now</a></h2>
+		<h2><a href="/users/sign_up" class="field1">start for free right now</a></h2>
 	</div>
 
 	<div class="analytics">
