--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,13 +1,29 @@
-<%= form_for @url do |f| %>
-	<%= f.label :url %>
-	<%= f.text_field :url, placeholder: "Feed"%>
-	<%= f.submit %>
 
-	<% ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"].each do |dow| %>
-		<div>
-			<%= f.label dow, dow.titleize %>
-			<%= f.check_box dow %>
-		</div>
-	<% end %>
-<% end %>
+<div class="row">
+	<div class="col-md-6">
+		<%= form_for @url do |f| %>
+			<%= f.label :url %>
+			<%= f.text_field :url, placeholder: "Feed"%>
+			<%= f.submit %>
+
+			<% ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"].each do |dow| %>
+				<div>
+					<%= f.label dow, dow.titleize %>
+					<%= f.check_box dow %>
+				</div>
+			<% end %>
+		<% end %>
+	</div>
+
+	<div class="col-md-6">
+		<table class="table table-hover">
+			
+			<% current_user.urls.each do |url| %>
+			<tr>
+				<td><%= url.url %></td>
+				<td><%= link_to 'Modify', url %></td>
+			</tr>
+			<% end %>
+
+	</div>
 
