--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,12 @@
 <header>
 	<nav class="navbar">
 	  <div class="container-fluid">
-	      <a class="logo" href="/">Simple Social</a>
-	  		<a class="login" href="/users/sign_in">Log In</a>
+	  		<%= link_to "Simple Social", root_path, class: "logo" %>
+	  		<% if user_signed_in? %>
+	  			<%= link_to "Log Out", destroy_user_session_path, class: "login" %>
+	  			<% else %>
+	  			<%= link_to "Log In", new_user_session_path, class: "login" %>
+	  		<% end %>
 	  </div>
 	</nav>
 </header>
