added welcome current user to dashboard

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -10,3 +10,12 @@
 	background-color: #D01401;
 	text-decoration: none;
 }
+
+.welcomename {
+ 	font-size: 15px;
+  font-weight: 900;
+  border-bottom: 1px solid black;
+  margin-bottom: 30px;
+  margin-top: -20px;
+  padding-bottom: 4px;
+}
