added flash notifcations for add/modify urls

--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,5 +1,9 @@
 
 <div class="container">	
+	<% if flash[:notice] %>
+    <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
+  	<% end %>
+  	
 	<div class="row">
 		<div class="col-md-6">
 			<%= form_for @url do |f| %>
