--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -5,6 +5,7 @@
 		<ul>
 			<% current_user.posts.order(scheduled_at: :desc).limit(5).each do |post| %>
 				<li><%= post.status %></li>
+				<li><%= link_to "Edit", edit_post_path(post) %></li>
 			<% end %>
 		</ul>
 		<%= link_to "Schedule More", posts_path %>
