--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -6,32 +6,52 @@
   	
 	<div class="row">
 		<div class="col-md-6">
-			<%= form_for @url do |f| %>
-				<%= f.label :url %>
-				<%= f.text_field :url, placeholder: "Feed"%>
-				<%= f.submit %>
+			<div class="panel panel-info">
+				<div class="panel-heading">
+    				<h3 class="panel-title">Add a New Feed</h3>
+  				</div>
 
-				<% ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"].each do |dow| %>
-					<div>
-						<%= f.label dow, dow.titleize %>
-						<%= f.check_box dow %>
-					</div>
-				<% end %>
-			<% end %>
-		</div>
+ 			 	<div class="panel-body">
+				<%= bootstrap_form_for @url do |f| %>
+					
+					<%= f.text_field :url, placeholder: "Enter a valid RSS feed", skip_label: true %>
+					<%= f.submit "Save Feed", class: "btn btn-primary" %>
 
-		<div class="col-md-6">
-			<table class="table table-hover">
+					
+						<% ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"].each do |dow| %>
+							
+								<%= f.check_box dow %>
+
+						<% end %>
 				
-				<% current_user.urls.each do |url| %>
-				<tr>
-					<td><%= url.url %></td>
-					<td><%= link_to 'Modify', edit_url_path(url) %></td>
-				</tr>
-				<% end %>
-			</table>
+					
 
+				<% end %>
+				</div>
+			</div>
 		</div>
+
+			<div class="col-md-6">
+				<div class="panel panel-info">
+				<div class="panel-heading">
+    				<h3 class="panel-title">Your Saved Feeds</h3>
+  				</div>
+
+ 			 	<div class="panel-body">
+
+				<table class="table table-hover">
+					
+					<% current_user.urls.each do |url| %>
+					<tr>
+						<td><%= url.url %></td>
+						<td><%= link_to 'Modify', edit_url_path(url) %></td>
+					</tr>
+					<% end %>
+				</table>
+
+			</div>
+		</div>
+	</div>
 	</div>
 </div>
 
