--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Sign up</h2>
+<h2>Sign Up With Twitter</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div>
+<!--   <div>
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
@@ -23,7 +23,7 @@
 
   <div>
     <%= f.submit "Sign up" %>
-  </div>
+  </div> -->
 <% end %>
 
 <%= render "devise/shared/links" %>
