--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -1,21 +1,42 @@
 <div class="container">
 	<p class="welcomename"><%= "Welcome, #{current_user.name}"%></p>
-	<div class="col-md-4">
-		<strong>Upcoming Scheduled Tweets</strong>
-		<ul>
-			<% current_user.posts.order(scheduled_at: :desc).limit(5).each do |post| %>
-				<li><%= post.status %></li>
-				<li><%= link_to "Edit", edit_post_path(post) %></li>
-			<% end %>
-		</ul>
-		<%= link_to "Schedule More", posts_path %>
+	<div class="col-md-6">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<h3 class="panel-title">Upcoming Scheduled Tweets</h3>
+			</div>
+
+			<div class="panel-body">
+				<table class="table table-hover"
+					<% current_user.posts.order(scheduled_at: :desc).limit(5).each do |post| %>
+						<tr>
+							<td><%= post.status %></td>
+							<td><%= link_to "Edit", edit_post_path(post) %></td>
+						</tr>
+					<% end %>
+				</table>
+			</div>
+			<%= link_to "Schedule More", posts_path %>
+		</div>
 	</div>
 
-	<div class="col-md-4">
-		<strong>Current Favourite Sites</strong></br>
-		<% @urls.each do |url| %>
-			<p><%= url.url %></p>
-		<% end %>
-		<a href="/urls/new">Add More</a>
+	<div class="col-md-6">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<h3 class="panel-title">Current Favourite Sites</h3></br>
+			</div>
+
+			<div class="panel-body">
+				<table class="table table-hover">
+					<% @urls.each do |url| %>
+						<tr>
+							<td><p><%= url.url %></p></td>
+							<td><%= link_to "Edit", edit_url_path(url) %></td>
+						</tr>
+					<% end %>
+					<tr><a href="/urls/new">Add More</a></tr>
+				</table>
+			</div>
+		</div>
 	</div>
-</div>
+</div> <!-- container -->
