--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -11,7 +11,7 @@
 					<% current_user.posts.order(scheduled_at: :desc).limit(5).each do |post| %>
 						<tr>
 							<td><%= post.status %></td>
-							<td><%= post.scheduled_at %></td>
+							<td><%= post.scheduled_at.strftime("%B, %d, %I:%M %p") %></td>
 							<td><%= link_to "Edit", edit_post_path(post) %></td>
 						</tr>
 					<% end %>
