--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for Post.find(params[:id]) do |f| %>
-	<%= f.label :status %>
+	<%= f.label :status, "Tweet" %>
 	<%= f.text_field :status %>
 
-	<%= f.label :scheduled_at %>
+	<%= f.label :scheduled_at, "Scheduled At" %>
 	<%= f.text_field :scheduled_at, class: "datetimepicker" %>
 
 	<%= f.submit "submit" %>
