--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -5,7 +5,7 @@
 	<div class="col-md-12">
 		<div class="panel panel-info">
 			<div class="panel-heading">
-				<% if current_user.urls == nil? %>
+				<% if current_user.urls.nil? %>
 					<h3 class="panel-title">Step 1: Add a blog or website that you read a lot</h3>
 					<% else %>
 					<h3 class="panel-title">What Blogs Are You Reading Lately?</h3>
@@ -35,7 +35,8 @@
 							<td><%= post.status %></td>
 							<td><%= post.scheduled_at.localtime.strftime("%B, %d, %I:%M %p") %></td>
 							<td><%= link_to "Edit", edit_post_path(post) %></td>
-							<td><%= link_to "Delete", post_path(post), method: :delete, data: { confirm: 'Are you certain you want to delete this?' } %></td>
+							<td><%= link_to "Delete", post_path(post), method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %></td>
+							<td><%= link_to "Share Now", tweet_now_path, method: :post %></td>
 						</tr>
 					<% end %>
 				</table>
@@ -55,6 +56,7 @@
 						<tr>
 							<td><p><%= url.url %></p></td>
 							<td><%= link_to "Edit", edit_url_path(url) %></td>
+							<td><%= link_to "Delete", url_path(url), method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %></td>
 						</tr>
 					<% end %>
 					<tr><a href="/urls/new">Add More</a></tr>
