--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -35,7 +35,7 @@
 						<% current_user.urls.each do |url| %>
 						<tr>
 							<td><%= url.url %></td>
-								<td><%= link_to 'Schedule', edit_url_path(url) %></td>
+								<td><%= link_to 'Edit Schedule', edit_url_path(url) %></td>
 							</tr>
 						<% end %>
 					</table>
