--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -30,17 +30,21 @@
 			</div>
 			<div class="panel-body">
 				<table class="table table-hover">
-					<% current_user.posts.order(scheduled_at: :desc).limit(5).each do |post| %>
-						<tr>
-							<td><%= post.status %></td>
-							<td><%= post.scheduled_at.localtime.strftime("%B, %d, %I:%M %p") %></td>
-							<td><%= link_to "Edit", edit_post_path(post) %></td>
-							<td><%= link_to "Delete", post_path(post), method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %></td>
-							<td><%= link_to "Share Now", tweet_now_path, method: :post %></td>
-						</tr>
+					<% if current_user.posts.count == 0%>
+						<h4>Your upcoming scheduled tweets will appear.. once you schedule some!</h4>
+					<% else %>
+						<% current_user.posts.order(scheduled_at: :desc).limit(5).each do |post| %>
+							<tr>
+								<td><%= post.status %></td>
+								<td><%= post.scheduled_at.localtime.strftime("%B, %d, %I:%M %p") %></td>
+								<td><%= link_to "Edit", edit_post_path(post) %></td>
+								<td><%= link_to "Delete", post_path(post), method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %></td>
+								<td><%= link_to "Share Now", tweet_now_path, method: :post %></td>
+							</tr>
+						<% end %>
 					<% end %>
 				</table>
-				<%= link_to "Schedule More", posts_path %>
+				<%= link_to "Schedule Tweets", posts_path %>
 			</div>
 		</div>
 	</div>
