--- a/app/views/layouts/_datepicker.html.erb
+++ b/app/views/layouts/_datepicker.html.erb
@@ -1,4 +1,4 @@
-<input class="datetimepicker" type="text" name="date" placeholder="Click here to choose a time">
+<input class="datetimepicker form-control" type="text" name="date" placeholder="Click to choose a time">
 	<script>
 		$(function(){
   			jQuery('.datetimepicker').datetimepicker();
