--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
 	  		<%= link_to "Simple Social", root_path, class: "logo" %>
 	  		<% if user_signed_in? %>
 	  			<%= link_to "Sign Out", destroy_user_session_path, class: "login" %>
+	  			<%= link_to "Explore", posts_path, class: "login" %>
 	  			<%= link_to "Dashboard", dashboard_path, class: "login" %>
 	  			<% else %>
 	  			<%= link_to "Sign In", dashboard_path, class: "login" %>
