--- a/app/views/layouts/_datepicker.html.erb
+++ b/app/views/layouts/_datepicker.html.erb
@@ -1,4 +1,4 @@
-<input class="datetimepicker form-control" type="text" name="date" placeholder="Click to choose a time">
+<input class="btn btn-primary form-control datetimepicker" type="text" name="date" placeholder="Schedule For Later">
 	<script>
 		$(function(){
   			jQuery('.datetimepicker').datetimepicker({
