--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,4 +1,5 @@
-.col-md-4 a {
+/*Not sure why I have this so commenting it out right now.*/
+/*.col-md-4 a {
   font-size: 15px;
   padding: 5px 10px 5px 10px;
   background-color: #e74c3c;
@@ -9,7 +10,7 @@
 .col-md-4 a:hover {
 	background-color: #D01401;
 	text-decoration: none;
-}
+}*/
 
 .welcomename {
  	font-size: 15px;
