--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5,11 +5,11 @@ body, .jumbotron, .container {
 }
 
 .container-fluid {
-	margin-top:80px;
+	margin: 7% 7% 3% 0%;
 }
 
 .login {
-	margin-right: 6%;
+	margin-right:2%;
 	float: right;
 	font-size: 18px;
 	font-weight: 200;
