--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="page-header">
-		<h1>Share or Schedule</h1>
+		<h1>Schedule For Later or Share Now</h1>
 	</div>
 	<div class="row row-flex row-flex-wrap">
 		<% @urls.find_each do |url| %>
@@ -19,26 +19,26 @@
 					      <div class="caption">
 					      	<p><small>Published on: <%= entry.published.to_date.strftime("%B %d, %Y") %> at <%=entry.published.to_time.strftime("%I:%M%p") %></small></p>
 
-					        <h3><a href="<%= entry.url %>"><%= entry.title %></a></h3>
-					        <p><%= entry.summary %></p>
+					        <h3><a class="entry_title" href="<%= entry.url %>"><%= entry.title %></a></h3>
+
+					        <!-- <p><%= entry.summary %> comment this out for now until we can render images </p>
+ -->
+					        <%= form_tag "/send_tweet", method: :post do %>
+						        <input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
+				 						<!-- <input type="submit" class="btn btn-default" value="Schedule"/> -->
+						 				<%= render 'layouts/datepicker' %>
+				 					<% end %>
+
+					        <div class="or_split">
+					        	<p class="or">OR</p>
+					        </div>
 
 					        <%= form_tag "/tweet_now", method: :post do %>
 						        <input name="status" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-
-						        <div>
-						        	<input type="submit" class="btn btn-primary" value="Share Now"/>
-							  		<% end %>
-										</div>
-
-									<%= form_tag "/send_tweet", method: :post do %>
-						        		<input name="tweet" type="hidden" value="<%= entry.title %> <%= entry.url %>" />
-				 						<input type="submit" class="btn btn-default" value="Schedule"/>
-
-					 				<div>
-						 				<%= render 'layouts/datepicker' %>
-				 						<% end %>
-				 					</div>
+						        <input type="submit" class="btn btn-primary sharenow" value="Share Now"/>
+							  	<% end %>
 					      </div>
+
 					    </div>
 					  </div>
 					<% end %>
