got rid of schedule tweet button

--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -81,17 +81,12 @@
 			</div>
 			<div class="panel-body">
 					<%= form_tag '/send_tweet', method: :post do %>
-						<textarea class="form-control" name="tweet" rows="3" id="comment" placeholder="Compose your scheduled tweet."/></textarea><br>
+						<textarea class="form-control" name="tweet" rows="3" id="comment" placeholder="Compose your scheduled tweet" /></textarea><br>
 						<div class="col-lg-5">
 							<%= render 'layouts/datepicker' %>
 						</div>
-						<div class="col-lg-4">
-							<input type="submit" class="btn btn-info" value="Schedule my Tweet"/>
-						</div>
-					</div>
 					<% end %>
 			</div>
 		</div>
 	</div>
-</div>
 </div>
