--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -39,7 +39,7 @@
 					<% else %>
 						<% current_user.posts.where(sent: false).order(scheduled_at: :asc).limit(5).each do |post| %>
 							<tr>
-								<td><%= post.status %></td>
+								<td><%= post.status.truncate(65) %></td>
 								<td><%= post.scheduled_at.localtime.strftime("%B, %d, %I:%M %p") %></td>
 								<td><%= link_to "Edit", edit_post_path(post) %></td>
 								<td><%= link_to "Delete", post_path(post), method: :delete, data: { confirm: 'Are you sure you want to delete this?' } %></td>
